--- a/python/并发与并行.md
+++ b/python/并发与并行.md
@@ -2,7 +2,7 @@
 
 并发 VS 并行：
        首先并发**不等于**并行，盗用一张Erlang之父Joe Armstrong画的图，如下：
-       ![并发VS并行](http://img.blog.csdn.net/20171116161929840?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvWm9lX1N1/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+       ![并发VS并行](https://github.com/danielgy/TensorFlow_toturial/blob/master/python/image/concurrent%26paralism.jpg)
 ---
        并发：不要求“同时”进行（看起来像多任务）
        并行：要求“同时”进行（真正的多任务）
@@ -100,5 +100,5 @@ Finish[ Cost: 21.23  sec]
 ```
 
 **Celery**
-![这里写图片描述](http://img.blog.csdn.net/20171117144508329?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvWm9lX1N1/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+![celery](https://github.com/danielgy/TensorFlow_toturial/blob/master/python/image/celery.jpg)
 
