--- a/python/并发与并行.md
+++ b/python/并发与并行.md
@@ -2,8 +2,9 @@
 ---
 
 并发 VS 并行：
-       首先并发**不等于**并行，盗用一张Erlang之父Joe Armstrong画的图，如下：
+       首先并发**不等于**并行，盗用一张Erlang之父Joe Armstrong画的图：
        ![并发VS并行](https://github.com/danielgy/TensorFlow_toturial/blob/master/python/image/concurrent%26paralism.jpg)
+       
 ---
        并发：不要求“同时”进行（看起来像多任务）
        并行：要求“同时”进行（真正的多任务）
