--- a/python/并发与并行.md
+++ b/python/并发与并行.md
@@ -102,5 +102,7 @@ Finish[ Cost: 21.23  sec]
 ```
 
 **Celery**
-![celery](https://github.com/danielgy/TensorFlow_toturial/blob/master/python/image/celery.jpg)
+
+---
+![celery](https://github.com/danielgy/TensorFlow_toturial/blob/master/python/image/celery.png)
 
